# EmailOrganizer

./: .env.example  .gitignore  Dockerfile  FOLLOWUPS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: never-delete-rules.mdc  single-responsibility-principle.mdc
config/: rules.yaml  settings.yaml
config/prompts/: classify.txt  digest.txt
scripts/: deadman.sh  sleep_wake_drill.sh
src/: accuracy.py  alerting.py  backtester.py  canary.py  classifier.py  crawl.py  crawl_daemon.py  daemon.py  digest.py  engagement.py  executor.py  gmail_client.py  guardrails.py  janitor.py  label_change_handler.py  llm_provider.py  main.py  miners.py  models.py  observability.py  pipeline.py  planner.py  prompt_tuner.py  quarantine_manager.py  remediator.py  rule_learner.py  trash_learner.py  unsubscribe.py  watchdog.py
src/adapters/: factory.py
src/adapters/local/: file_config_loader.py  flock_lock_mgr.py  imap_idle_notifier.py  launchd_process_mgr.py  single_user_auth.py  sqlite_store.py
src/llm_providers/: anthropic_provider.py  llamacpp_provider.py  nollm_provider.py  ollama_provider.py  openai_provider.py
src/ports/: auth.py  config_loader.py  lock_manager.py  mail_notifier.py  process_manager.py  state_store.py
tests/: test_accuracy.py  test_classifier.py  test_engagement.py  test_feedback_loops.py  test_guardrails.py  test_priority_inbox.py  test_srp.py
